--- a/democratos/CreateYourLaws/templates/content_reflec.html
+++ b/democratos/CreateYourLaws/templates/content_reflec.html
@@ -1,6 +1,8 @@
 {% load special_filters %}
 {% load staticfiles %}
 
+
+<script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
 {% autoescape off %}
 
 <!--############################################################################################
