--- a/democratos/CreateYourLaws/templates/base_CYL.html
+++ b/democratos/CreateYourLaws/templates/base_CYL.html
@@ -26,4 +26,7 @@
 	 <section id="content">
 	   {% block content %}{% endblock %}
 	 </section>
+		 <section id="isso">
+	    {% block isso %}{% endblock %}
+   	</section>
  {% endblock %}
