--- a/democratos/democratos/static/css/style.css
+++ b/democratos/democratos/static/css/style.css
@@ -1,7 +1,22 @@
+html{
+	margin: 0;
+    padding: 0;
+    border: 0 none;
+}
+
+body{
+	font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
+	font-size: 14px;
+    margin: 0;
+    padding: 0;
+    border: 0 none;
+    background: #ffffff	;
+}
+
 header{
 	width: 100%;
-	height: 120px;
-	background-color: blue;
+	height: 80px;
+	background-color: navy;
 	color:  white;
 	text-align: center;
 	vertical-align: middle;
@@ -11,8 +26,13 @@ nav{
 	float: left;
 	width: 17%;
 	height: 900px;
-	border: 2px solid black;
 	display: none;
+	background: #f0f0f0;
+}
+
+main{
+	display: inline-block;
+	width: 83%;
 }
 
 #intro{
@@ -27,7 +47,7 @@ nav{
 }
 
 #content{
-	margin: 0.5%;
+	margin: 0.2%;
 	border-width: 4px;
 	border-color: black;
 	border-style: solid;
@@ -44,13 +64,17 @@ nav{
 	display: inline-block;
 }
 
+.simple_design{
+	text-align: left;
+	margin-bottom: 100px;	
+}
 
 section{
-	display: inline-block;
-	width: 80%;	
-	margin: 1%;
+	display: inline-block;	
 	position: relative;
 	text-align: center;
+	box-sizing: border-box;
+	width: 98%;
 }
 
 section p {
@@ -63,21 +87,21 @@ section ul {
 
 section table{
 	text-align: left;	
-	width: 100%;
 }
 
-section button{
+button{
 	padding: 1.5%;
 	margin: 2%;
 	border-radius: 30px;
 	color: black;
+	cursor: pointer;
 }
 
 .butopinion{
 	background: -moz-linear-gradient(110deg,#f98b8b 50%,#93f99a 50%);
 }
 
-.butcom {
+.butexp {
 	background-color: #f2cf7b;
 	border-color: #f0aa01;
 }
@@ -107,8 +131,6 @@ section button{
 	margin-right: 1%;
 }
  
-section td:hover {background-color: #f5f5f5}
-
 .disclaim
 {
 	background-color: #F9AC68;
@@ -121,7 +143,7 @@ section td:hover {background-color: #f5f5f5}
 	padding: 10px;
 }
 
-.posopinon
+.posopinion
 {
 	background-color: #93f99a;
 	border-width: 4px;
@@ -135,7 +157,7 @@ section td:hover {background-color: #f5f5f5}
 	width: 45.5%;
 }
 
-.negopinon
+.negopinion
 {
 	background-color: #f98b8b;
 	border-width: 4px;
@@ -156,14 +178,14 @@ section form{
 	list-style: none;
 }
 
-.opform{
+#opform{
 	background: -moz-linear-gradient(110deg,#f98b8b 50%,#93f99a 50%);
 	border-style: solid;
 	border-color: #93f99a;
 	border-radius: 8px;
 }
 
-.opform ul{
+#opform ul{
 	list-style: none;
 }
 
@@ -196,10 +218,10 @@ section form{
 .explaination
 {
 	background-color: #f2cf7b;
-	border-width: 4px;
+	border-width: 2px;
 	border-color: #f0aa01;
 	border-style: solid;
-	border-radius: 8px;
+	border-radius: 4px;
 	border-spacing: 10px;
 	margin: 1%;
 	padding: 10px;
@@ -208,12 +230,127 @@ section form{
 .question
 {
 	background-color: #a477cc;
-	border-width: 4px;
+	border-width: 2px;
 	border-color: #5f2f89;
 	border-style: solid;
-	border-radius: 8px;
+	border-radius: 4px;
 	border-spacing: 10px;
 	margin: 1%;
 	padding: 10px;
 }
 
+.donut
+{
+	vertical-align: -12px;
+
+}
+
+.donuts_label
+{
+	font-weight: bold;	
+}
+
+.icn
+{
+	vertical-align: -8px;	
+}
+
+.UP
+{
+	vertical-align: -12px;	
+}
+
+.DOWN
+{
+	vertical-align: -12px;	
+}
+
+.count
+{
+	float:  left;
+}
+
+.vote
+{
+	float:  right;
+}
+
+.IDB{
+	padding: 1px;
+}
+
+.IDB:hover {
+	background-color: #ccccff;
+	cursor: pointer;
+}
+
+.clickable:hover{
+	background-color: #ccccff;
+}
+
+.clickable {
+	cursor: pointer;
+}
+
+#home_icone{
+	float: left;
+	vertical-align: middle;
+	padding: 6px;
+	margin: 6px;
+	margin-left: 20px;
+	margin-right: 20px;
+}
+
+.header_button{
+	float: right;
+	display: inline-block;
+	font-size: 16px;
+	font-weight: bold;	
+	color: white;
+	vertical-align: middle;
+	padding: 30px;
+	cursor: pointer;
+}
+
+.suscribe{
+	float:right;
+	font-weight: bold;
+}
+
+.list_nav{
+	padding: 8px;
+	margin-right: 5px;
+	font-size: 14px;
+	font-weight: bold;
+}
+
+.list_nav:hover {
+	background-color: white;
+	cursor: pointer;
+}
+
+.InDatBox:hover {
+	cursor: pointer;
+}
+
+.butprofile {
+	padding: 1.5%;
+	margin: 2%;
+	border-radius: 30px;
+	cursor: pointer;
+	color: white;
+	background-color: navy;
+}
+
+.short_message{
+	padding-left:10%; 
+	padding-top:5%;
+}
+
+#Profile_section{
+	margin: 2%;
+}
+
+.error_message{
+	color: 	#b30000;
+}
