--- a/democratos/CreateYourLaws/templates/content_reflec.html
+++ b/democratos/CreateYourLaws/templates/content_reflec.html
@@ -187,8 +187,9 @@
             </div>
 
             <button class="butopinion" type="button">Ajouter un point positif ou <br> négatif sur cette loi</button>
-                <form action="{% url 'reflection' %}" method="post" id="opform" name="loi:{{ref.id_ref}}">
+                <form action="{% url 'PostReflection' %}" method="post" id="opform" name="loi:{{ref.id_ref}}">
                     {{ opform.as_p }}
+                    <input type="hidden" name="typeform" value="opnf">
                     <input type="hidden" name="typeref" value="{{typeref}}">
                     <input type="hidden" name="ref_id" value="{{ref.id}}">
                     <button type="submit" class="butopinion" name="btnopform">Poster le point de vue</button>
@@ -239,8 +240,9 @@
             </table> 
 
         <button class="butprop" type="button">Faire une autre proposition <br>  que cette loi</button>
-            <form action="{% url 'PostAProp' %}"  method="post" id="propform">
-                {{ propform.as_p }}
+            <form action="{% url 'PostReflection' %}"  method="post" id="propform">
+                {{ propform.as_p }} 
+                <input type="hidden" name="typeform" value="prpf">
                 <input type="hidden" name="typeref" value="{{typeref}}">
                 <input type="hidden" name="ref_id" value="{{ref.id}}">
                 <button type="submit" class="butprop" name="propform">Poster votre proposition </button>
